<resources>
    <string name="app_name">Sound Therapy</string>
    <string name="image_background_default">background_default.png</string>
    <string name="image_app_title">app_title.png</string>
    <string name="image_app_icon">app_icon.png</string>
    <string name="image_app_description">app_description.png</string>
    <string name="image_btn_continue_white_bg">btn_continue_white_bg.png</string>
    <string name="image_btn_continue_white_text">btn_continue_white_text.png</string>
    <string name="image_text_welcome_to">text_welcome_to.png</string>
    <string name="image_btn_location_access">btn_location_access.png</string>
    <string name="image_btn_health_access_bg">btn_health_access_bg.png</string>
    <string name="image_btn_health_access_text">btn_health_access_text.png</string>
    <string name="image_text_adrenaline_mode">text_adrenaline_mode.png</string>
    <string name="image_text_adrenaline_explained">text_adrenaline_explained.png</string>
    <string name="image_icon_adrenaline_mode">icon_adrenaline_mode.png</string>
    <string name="image_btn_healing_mode">btn_healing_mode.png</string>
    <string name="image_text_healing_mode">text_healing_mode.png</string>
    <string name="image_text_healing_explained">text_healing_explained.png</string>
    <string name="image_icon_healing_mode">icon_healing_mode.png</string>
    <string name="image_btn_deepsleep_mode">btn_deepsleep_mode.png</string>
    <string name="image_text_deepsleep_mode">text_deepsleep_mode.png</string>
    <string name="image_text_deepsleep_explained">text_deepsleep_explained.png</string>
    <string name="image_icon_deepsleep_mode">icon_deepsleep_mode.png</string>
    <string name="image_btn_focus_mode_bg">btn_focus_mode_bg.png</string>
    <string name="image_btn_focus_mode_text">btn_focus_mode_text.png</string>
    <string name="image_text_focus_mode">text_focus_mode.png</string>
    <string name="image_text_focus_explained">text_focus_explained.png</string>
    <string name="image_icon_focus_mode">icon_focus_mode.png</string>
    <string name="image_btn_recovery_mode_bg">btn_recovery_mode_bg.png</string>
    <string name="image_btn_recovery_mode_text">btn_recovery_mode_text.png</string>
    <string name="image_text_recovery_mode">text_recovery_mode.png</string>
    <string name="image_text_recovery_explained">text_recovery_explained.png</string>
    <string name="image_icon_recovery_mode">icon_recovery_mode.png</string>
    <string name="text_title_adrenaline">Adrenaline Mode</string>
    <string name="text_title_healing">Refresh Air</string>
    <string name="text_title_deepsleep">New Ambient</string>
    <string name="text_title_focus">Deep Focus</string>
    <string name="text_title_recovery">Recovery</string>
    <string name="image_icon_adrenaline_unselected">icon_adrenaline_unselected.png</string>
    <string name="image_icon_healing_unselected">icon_healing_unselected.png</string>
    <string name="image_icon_deepsleep_unselected">icon_deepsleep_unselected.png</string>
    <string name="image_icon_focus_unselected">icon_focus_unselected.png</string>
    <string name="image_icon_recovery_unselected">icon_recovery_unselected.png</string>
    <string name="image_icon_pause">icon_pause.png</string>
    <string name="image_icon_music">icon_music.png</string>
    <string name="image_icon_alarm_bg">icon_alarm_bg.png</string>
    <string name="image_icon_alarm_image">icon_alarm_image.png</string>
    <string name="image_icon_settings">icon_settings.png</string>
    <string name="image_icon_adrenaline_selected">icon_adrenaline_selected.png</string>
    <string name="image_icon_healing_selected">icon_healing_selected.png</string>
    <string name="image_icon_deepsleep_selected">icon_deepsleep_selected.png</string>
    <string name="image_icon_focus_selected">icon_focus_selected.png</string>
    <string name="image_icon_recovery_selected">icon_recovery_selected.png</string>
    <string name="image_spinner_round">spinner_round.png</string>
    <string name="image_spinner_dots">spinner_dots.png</string>
    <string name="text_finding_the_best">Finding the best</string>
    <string name="text_sounds_for_you">sounds for you...</string>
    <string name="image_rect_bg_timer">rect_bg_timer.png</string>
    <string name="image_icon_timer">icon_timer.png</string>
    <string name="image_text_shout_off_timer">text_shout_off_timer.png</string>
    <string name="image_text_timer_explained">text_timer_explained.png</string>
    <string name="image_rect_timepicker_timer">rect_timepicker_timer.png</string>
    <string name="image_text_alarm_sound">text_alarm_sound.png</string>
    <string name="image_btn_cancel_timer">btn_cancel_timer.png</string>
    <string name="image_btn_set_timer">btn_set_timer.png</string>
</resources>
